@@ -133,18 +133,17 @@ static int NET_StringToAdr (const char *s, netadr_t *a)
 	return 1;
 }
 
-static int NET_WaitReadTimeout (sys_socket_t fd, long sec, long usec)
+static int NET_CheckReadTimeout (long sec, long usec)
 {
-	fd_set rfds;
-	struct timeval tv;
+	fd_set		readfds;
+	struct timeval	timeout;
 
-	FD_ZERO(&rfds);
-	FD_SET(fd, &rfds);
+	FD_ZERO (&readfds);
+	FD_SET (socketfd, &readfds);
+	timeout.tv_sec = sec;
+	timeout.tv_usec = usec;
 
-	tv.tv_sec = sec;
-	tv.tv_usec = usec;
-
-	return select(fd+1, &rfds, NULL, NULL, &tv);
+	return select(socketfd + 1, &readfds, NULL, NULL, &timeout);
 }
 
 static void NET_Init (void)
@@ -305,13 +304,13 @@ int main (int argc, char *argv[])
 	/* read the response */
 		memset (response, 0, sizeof(response));
 		fromlen = sizeof(hostaddress);
-		if (NET_WaitReadTimeout (socketfd, 5, 0) <= 0)
+		if (NET_CheckReadTimeout(5, 0) <= 0)
 		{
 		/*	Sys_Error ("*** timeout waiting for reply");*/
 			printf ("*** timeout waiting for reply\n");
 		}
 		else
-		while (NET_WaitReadTimeout(socketfd, 0, 50000) > 0)
+		while (NET_CheckReadTimeout(0, 50000) > 0)
 		{
 			size = recvfrom(socketfd, (char *)huffbuff, sizeof(response), 0,
 				(struct sockaddr *)&hostaddress, &fromlen);
